# JPEG.CAM-2.0

./: AGENTS.md  GEMINI.md  README.md
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  process_kernel.h
app/src/main/java/com/github/ma1co/pmcademo/app/: AdvancedFocusMeterView.java  BatteryView.java  CinemaMatteView.java  ConnectivityManager.java  DiptychManager.java  DiptychOverlayView.java  Filepaths.java  GridLinesView.java  HardwareRecipeApplier.java  HttpServer.java  HudController.java  ImageProcessor.java  InputManager.java  LensCalibrationController.java  LensMath.java  LensProfileManager.java  LutEngine.java  MainActivity.java  MatrixManager.java  MdnsResponder.java  MenuController.java  MenuManager.java  PlaybackActivity.java  PlaybackController.java  ProReticleView.java  ProcessingQueueManager.java  RTLProfile.java  RecipeManager.java  SonyCameraManager.java  SonyCreativeStyleHelper.java  SonyFileScanner.java  UiTheme.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/stubs/com/sony/scalar/hardware/: CameraEx.java
app/src/main/stubs/com/sony/scalar/sysutil/: ScalarInput.java
